--- a/inventory_management/pubspec.yaml
+++ b/inventory_management/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   animated_splash_screen: ^1.1.0
   firebase_auth: ^3.3.5
   firebase_core: ^1.11.0
+  google_sign_in: ^5.0.0
   cloud_firestore: ^3.1.6
 
 dev_dependencies:
