--- a/inventory_management/android/app/src/main/AndroidManifest.xml
+++ b/inventory_management/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yaash.inventory_management">
+   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
    <application
         android:label="inventory_management"
         android:icon="@mipmap/ic_launcher">
