--- a/inventory_management/pubspec.yaml
+++ b/inventory_management/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assest/navirlogo.jpeg
+   - assest/Gs.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
